# track_analyzer

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  api.html  bump.py  cli.html  comparison.html  enhancer.html  generate_visualization_examples.py  genindex.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  release.zsh  releases.html  search.html  searchindex.js  setup.cfg  usage.html
.github/workflows/: deploy.yml  doc.yml  documentation.yml  test.yml
_sources/: comparison.rst.txt  index.rst.txt  releases.rst.txt  usage.rst.txt
_static/examples/visualization/: map_line.html  map_line_enhanced.html  map_line_enhanced_interpolated.html  map_segments.html  profile.html  profile_simple.html  profile_slope.html
api_comparison/: index.html
api_enhancer/: index.html
api_model/: index.html
api_tracks/: index.html
api_visualizations/: index.html
changelog/: index.html
cli/: index.html
comparison/: index.html
docs/: api.rst  api_model.md  api_tracks.md  api_visualizations.md  changelog.md  cli.md  cli.rst  comparison.md  comparison.rst  conf.py  dump_github_releases.py  enhancer.rst  generate_comparison_examples.py  generate_visualization_examples.py  geojson.md  index.md  index.rst  postgis.md  usage.md  usage.rst  vis_profiles_and_maps.md  vis_summaries.md  visualizations.md  visualizations.rst
enhancer/: index.html
examples/: dump_zones.py
geo_track_analyzer/: __init__.py  compare.py  enhancer.py  exceptions.py  model.py  processing.py  track.py
geo_track_analyzer/cli/: __init__.py  _inspect_track.py  _update_elevation.py
geo_track_analyzer/postgis/: db.py
geo_track_analyzer/utils/: base.py  geojson.py  internal.py  model.py  track.py
geo_track_analyzer/visualize/: __init__.py  constants.py  map.py  metrics.py  profiles.py  progression.py  summary.py  utils.py
geo_track_analyzer/visualize/dash/: inspect.py
geojson/: index.html
gpx_track_analyzer/: compare.py  enhancer.py  enums.py  exceptions.py  find_line_segments.py  model.py  processing.py  track.py  utils.py  visualize.py
gpx_track_analyzer/cli/: extract_track.py
gpx_track_analyzer/test/: test_enhancer.py  test_model.py  test_track.py  test_utils.py
postgis/: index.html
requirements/: dev.in  dev.txt  doc.txt  prod.txt  test.txt
search/: search_index.json
snippets/examples/visualization/: map_line.html  map_line_enhanced.html  map_line_enhanced_interpolated.html  map_segments.html  profile.html  profile_simple.html  profile_slope.html  profile_w_cadence_no_zones.html  profile_w_cadence_zones.html  profile_w_segment_borders.html  segment_box_elevation.html  segment_box_heartrate.html  segment_box_speed.html  segment_summary_avg_speed.html  segment_summary_max_speed.html  segment_summary_total_distance.html  segment_summary_total_time.html  zone_segment_summary_hr_time.html  zone_summary_hr_distance.html  zone_summary_hr_speed.html  zone_summary_hr_time.html
tests/: conftest.py  test_cli.py  test_compare.py  test_db.py  test_enhancer.py  test_geo_json.py  test_model.py  test_processing.py  test_track.py  test_utils.py  test_visualize.py  test_visualize_interactive.py  test_visualize_map.py  test_visualize_metrics.py  test_visualize_profiles.py  test_visualize_summary.py
tests/resources/: Teilstueck_Schau_ins_land.gpx  line_geo.json  line_geo_multi_segment.json  line_no_coords_geo.json  line_no_coords_geo_multi_segment.json  point_geo.json  point_no_coords_geo.json  processed_Weight_Training.json  summary_test_data.csv
track_analyzer/: compare.py  enhancer.py  exceptions.py  model.py  processing.py  track.py  utils.py  visualize.py
track_analyzer/cli/: extract_track.py
track_analyzer/utils/: base.py  track.py
track_analyzer/visualize/: __init__.py  constants.py  map.py  profiles.py  utils.py
usage/: index.html
