[tool.poetry]
name = "track-analyzer"
version = "0.1.2"
description = "Analyze geospacial data tracks"
authors = ["Korbinian Schweiger <korbinian.schweiger@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "track_analyzer" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
gpxpy = "^1.5.0"
coloredlogs = "^15.0.1"
requests = "^2.28.2"
plotly = ">=5.11.0"
pandas = "^1.5.3"
fitparse = "^1.2.0"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
types-requests = "^2.28.11.15"
ruff = "^0.0.257"
ipython = "^8.11.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[tool.poetry.scripts]
extract_fit_track = 'track_analyzer.cli.extract_track:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = "tests"

[tool.ruff]
select = ["E", "F", "I", "PD", "PT", "NPY", "N", "W"]
unfixable = ["F841"]
