[tool.poetry]
name = "track-analyzer"
version = "0.4.0"
description = "Analyze geospacial data tracks"
authors = ["Korbinian Schweiger <korbinian.schweiger@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "track_analyzer" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
gpxpy = "^1.5.0"
coloredlogs = "^15.0.1"
requests = "^2.31.0"
plotly = ">=5.17.0"
pandas = "^1.5.3"
fitparse = "^1.2.0"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.9.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"
types-requests = "^2.31.0.6"
ruff = "^0.0.291"
ipython = "^8.15.0"
bpython = "^0.24"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[tool.poetry.scripts]
extract_fit_track = 'track_analyzer.cli.extract_track:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests/"]

[tool.ruff]
select = ["E", "F", "I", "PD", "PT", "NPY", "N", "W", "RET", "ANN", "RUF"]
unfixable = ["F841", "RUF005"]
ignore = ["ANN101", "RUF009", "E731", "RET505"]
ignore-init-module-imports = true
target-version = "py310"

[tool.mypy]
strict_optional = true
check_untyped_defs = true
exclude = "tests"

[[tool.mypy.overrides]]
module = "fitparse.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "coloredlogs.*"
ignore_missing_imports = true
