[metadata]
name = gpx_track_analyzer
version = 0.0.1
author='Korbinian Schweiger'
author_email='korbinina.schweiger@gmail.com'
description='Analyze PGX tracks'


[options]
packages = gpx_track_analyzer
install_requires =
    numpy
    gpxpy==1.5.*
    coloredlogs
    requests


[flake8]
max-line-length = 88
extend-ignore = E203,E266,E402  # E203 conflicts with PEP8; see https://github.com/psf/black#slices

# flake8-pytest-style
# PT006:
pytest-parametrize-names-type = tuple
# PT007:
pytest-parametrize-values-type = list
pytest-parametrize-values-row-type = tuple
# PT023:
pytest-mark-no-parentheses = true

[isort]
profile = black


